--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 body {
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 #root {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
